--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
     gtag('config', 'UA-107513305-2');
   </script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
